websocket connections coded

--- a/src/app/mic-control/mic-control.component.html
+++ b/src/app/mic-control/mic-control.component.html
@@ -1,4 +1,4 @@
 <div class="app-mic-control" (click)="toggleMic()">
-  <img *ngIf="micON" class="mic-img" src="assets/microphone-slash-solid.svg" alt="">
-  <img *ngIf="!micON" class="mic-img" src="assets/microphone-solid.svg" alt="">
+  <img *ngIf="!micON" class="mic-img" src="assets/microphone-slash-solid.svg" alt="">
+  <img *ngIf="micON" class="mic-img" src="assets/microphone-solid.svg" alt="">
 </div>
