--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="app-container">
   <div class="app-container-0">78297923</div>
-  <div class="app-container-1"></div>
+  <div class="app-container-1">
+    <app-video-screen></app-video-screen>
+  </div>
   <div class="app-container-2">
     <app-control-toolbar></app-control-toolbar>
   </div>
