clean unused code

--- a/src/app/video-screen/video-screen.component.html
+++ b/src/app/video-screen/video-screen.component.html
@@ -1,4 +1,6 @@
 <div class="app-vid-screen">
     <video id="vidId"></video>
-    <div id="peerDiv"></div>
+    <div id="peerDiv">
+        <video id="peerVideo"></video>
+    </div>
 </div>
